<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:padding="32dp"
    android:paddingTop="32dp"
    android:background="@drawable/bg_gradient">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/quotify"
        android:fontFamily="@font/montserrat_semibold"
        android:textAlignment="center"
        android:textSize="38sp"
        android:textColor="#FFFFFF"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@drawable/bg_card"
        android:orientation="vertical"
        android:paddingStart="16dp"
        android:paddingTop="16dp"
        android:paddingEnd="16dp"
        android:paddingBottom="40dp">
        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:scaleX="-1"
            android:scaleY="-1"
            app:tint = "#454545"
            android:src="@drawable/ic_quote"/>

        <TextView
            android:id="@+id/quoteText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_semibold"
            android:paddingStart="10dp"
            android:text="@string/genius_is_one_percent_inspiration_and_ninety_nine_percent_perspiration"
            android:textColor="#454545"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/quoteAuthor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:paddingStart="10dp"
            android:text="@string/bruce_wayne"
            android:fontFamily="@font/montserrat_medium"
            android:textColor="#454545"
            android:textSize="20sp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:id="@+id/previousQuoteTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableStart="@drawable/left_arrow"
            android:drawableTint="#80FFFFFF"
            android:text="@string/previous"
            android:onClick="onPrevious"
            android:textColor="#80FFFFFF"
            android:textSize="18sp"/>

        <TextView
            android:id="@+id/nextQuote"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableEnd="@drawable/right_arrow"
            android:drawableTint="#80FFFFFF"
            android:text="@string/next"
            android:onClick="onNext"
            android:textAlignment="textEnd"
            android:textColor="#80FFFFFF"
            android:textSize="18sp"/>
    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButton"
        android:onClick="onShare"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_share"
        android:backgroundTint="#454545"
        app:tint="@color/white"
        android:clickable="true"
        android:layout_marginRight="24dp"
        app:layout_constraintBottom_toBottomOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"/>



</androidx.constraintlayout.widget.ConstraintLayout>